other-mpol/spread-pods-across-topology/.chainsaw-test/policy-ready.yaml
apiVersion: policies.kyverno.io/v1
kind: MutatingPolicy
metadata:
  name: spread-pods
status:
  conditionStatus:
    (conditions[?type == 'WebhookConfigured']):
    - message: Webhook configured.
      reason: Succeeded
      status: "True"
      type: WebhookConfigured
    (conditions[?type == 'RBACPermissionsGranted']):
    - message: Policy is ready for reporting.
      reason: Succeeded
      status: "True"
      type: RBACPermissionsGranted
    (length(conditions)): 2
    ready: true
