other-mpol/spread-pods-across-topology/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: spread-pods-across-topology
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../spread-pods-across-topology.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: deploy.yaml
  - name: step-03
    try:
    - assert:
        file: deploy01-patched.yaml
    - error:
        file: deploy02-not-patched.yaml
    - error:
        file: deploy03-not-patched.yaml
